themes/qgis-theme/static/qgis-style.less
/* ... */
#color-identifier.about {
  background-color: #eff391;
}
#color-identifier.forusers {
  background-color: #0088cc;
}
#color-identifier.getinvolved {
  background-color: #129700;
}
#color-identifier.documentation {
  background-color: #971800;
}
section.sub-landing-page {
  font-size: 14px;
  line-height: 20px;
  color: #4d4e50;
}
section.sub-landing-page .container {
  margin-right: auto;
  margin-left: auto;
  background-color: white;
  padding-top: 40px;
  width: 940px;
  position: relative;
}
section.sub-landing-page .container:after {
  clear: both;
}
section.sub-landing-page h2 {
  line-height: 150%s;
}
section.sub-landing-page hr {
  margin: 70px 0;
}
section.sub-landing-page h4.subsection-link {
  margin-top: 20px;
}
div.banner {
  padding-top: 40px;
}
section.menu nav.subnav {
  padding: 30px 0;
  background: white;
  color: #1c2028;
  text-align: center;
}
section.menu nav.subnav header {
  height: 30px;
  overflow: visible;
  border-bottom: 1px solid #bbb;
  margin-bottom: 40px;
}
section.menu nav.subnav h3 {
  text-transform: uppercase;
  display: inline-block;
  font-weight: 400;
  background: white;
  padding: 0 40px;
}
section.menu nav.subnav ul {
  margin-top: 40px;
}
section.menu nav.subnav ul li {
  display: inline;
  margin: 0 10px;
}
section.menu nav.subnav ul li a {
  font-weight: bold;
  color: #1c2028;
}
section.menu nav.subnav ul li a:hover {
  text-decoration: none;
  color: #0088cc;
}
#myModal .modal-img {
  width: 100%;
}
#myModal .modal-body p {
  margin: 15px;
}
.background-mask {
  background-color: #ccc;
}
@media (max-width: 983px) {
  img.overflow-img,
  #processing {
    min-width: 100% !important;
  }
}
@media (min-width: 984px) {
  img.overflow-img,
  #processing {
    max-width: none !important;
  }
}
/********* QGIS-Documentation Pages *********/
/* fixing the toc higher levels. Bootstraps makes the active lx tocs blue */
.nav-list > .active > a,
.nav-list > .active > a:hover,
.nav-list > .active > a:focus {
  background-color: #fff !important;
  color: #0088CC !important;
  text-shadow: none !important;
}
.toctree-l2.current,
.toctree-l3.current,
.toctree-l4.current {
  font-style: italic;
}
.toctree-l4 {
  font-size: 90%;
}
/* color for qgis version disclaimer (used when files need to be revised) */
.disclaimer {
  display: block;
  color: black;
  margin-top: 17px;
  padding: 9px 30px 14px 50px;
  background-color: #fbfbfb;
  border-bottom: 1px solid #dfdfdf;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;
  border-top: 1px solid #f5f5f5;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  box-shadow: 0 1px 3px #CCCCCC;
}
/* (Sphinx) admonition changes, as used in documentation */
.admonition-title {
  font-size: larger;
  display: block;
  border-bottom: 1px #ddd solid;
  margin-left: 44px !important;
}
/* theming of warning boxes class=".admonition .warning" */
.warning, .disclaimer {
  background-image: url("images/warning.png");
  background-position: 15px 8px;
  background-repeat: no-repeat;
}
/* theming of warning boxes class=".admonition .note" */
.note {
  background-image: url("images/note.png");
  background-position: 15px 8px;
  background-repeat: no-repeat;
}
/* theming of warning boxes class=".admonition .tip" */
.tip {
  background-image: url("images/tip.png");
  background-position: 15px 8px;
  background-repeat: no-repeat;
}
.admonition,
.bordered-block {
  background-color: #fbfbfb;
  border-bottom: 1px solid #dfdfdf;
  border-left: 1px solid #ececec;
  border-right: 1px solid #ececec;
  border-top: 1px solid #f5f5f5;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  box-shadow: 0 1px 3px #CCCCCC;
}
.admonition p img,
.bordered-block p img {
  float: left;
  margin: 0 15px 0 0;
}
.guilabel {
  font-weight: bold;
  border: 1px solid #ddd;
  background: #eee;
  color: #08C;
  padding-left: 3px;
  padding-right: 3px;
}
.menuselection {
  font-weight: bold;
  border: 1px dashed #ddd;
  background: #eee;
  color: #217AEC;
  padding-left: 3px;
  padding-right: 3px;
}
.kbd {
  font-weight: bold;
  border: 1px solid #ddd;
  background: #eee;
  color: #E22;
  padding-left: 3px;
  padding-right: 3px;
}
/* hopefully fixing the oversizing of images eg in case studies */
img.align-right, .figure.align-right, object.align-right {
  clear: right;
  float: right;
  margin-left: 1em;
  max-width:100%;
}
/*styling the thankyou overlays*/
#thankyou{
    display:none;
    background-color:#dddddd;
    position:fixed;
    left:5%;
    top:8%;
    width:80%;
    padding:10% 5%;
    opacity:0.93;
    z-index:10000;
}
#thankyoucontent{
    width:70%;
    margin: 0 auto;
}

/* generation of sponsor lists */

.sponsordiv {
   padding-top:20px;
   color:#666;
}
.sponsor_img {
    float: left;
}
#qgissponsorsatom .sponsor_img.gold {
    width: 300px;
}
#qgissponsorsatom .sponsor_img.silver {
    width: 200px;
}
#qgissponsorsatom .sponsor_img.bronze {
    width: 90px;
}
#qgispastsponsorsatom .sponsor_img.gold {
    width: 60px;
}
#qgispastsponsorsatom .sponsor_img.silver {
    width: 60px;
}
#qgispastsponsorsatom .sponsor_img.bronze {
    width: 60px;
}
#qgissponsorsatom .sponsor_body.gold {
    padding-left:330px;
}
#qgissponsorsatom .sponsor_body.silver {
    padding-left:230px;
}
#qgissponsorsatom .sponsor_body.bronze {
    padding-left:120px;
}

#qgissponsorsatom h4 {
    font-size:22px;
}
#qgispastsponsorsatom .sponsor_body.gold {
    padding-left:80px;
}
#qgispastsponsorsatom .sponsor_body.silver {
    padding-left:80px;
}
#qgispastsponsorsatom .sponsor_body.bronze {
    padding-left:80px;
}
#qgispastsponsorsatom .sponsor_body {
    line-height:1rem;
    color: #bbb;
}
#qgispastsponsorsatom .sponsordiv {
    padding-top: 0px !important;
}
#qgispastsponsorsatom h4 {
    margin: 2px 0px !important;
    font-size: 12px;
    color: #bbb;
}

